--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -40,6 +40,18 @@
         row-gap: 20px;
         margin: 60px 0 60px 0;
     }
+    &__content-kitchen {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        margin: 60px 0 60px 0;
+    }
+    &__content-plants {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        margin: 60px 0 60px 0;
+    }
     &__content-item {
         border: 1px solid $black;
         box-shadow: 5px 5px 10px 0 rgba(0,0,0, 0.25);
@@ -65,21 +77,14 @@
         margin-bottom: 8px;
         word-break: break-word;
     }
+    .hidden {
+        display:none;
+    }
 }
 @media screen and (min-width:768px) {
     .catalog {
         &__tabs {
             width:fit-content;
-        }
-        &__tab {
-            &:hover::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 2px;
-                background-color: $ceramic;
-                bottom: -4px;
-            }
         }
         &__content-tea {
             flex-direction: row;
@@ -87,6 +92,22 @@
             gap: 16px;
             padding: 10px 10px 0 10px;
             position:relative;
+            @include angle-decoration;
+        }
+        &__content-kitchen {
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 16px;
+            padding: 10px 10px 0 10px;
+            position: relative;
+            @include angle-decoration;
+        }
+        &__content-plants {
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 16px;
+            padding: 10px 10px 0 10px;
+            position: relative;
             @include angle-decoration;
         }
         &__content-item {
@@ -104,6 +125,24 @@
             padding: 25px 25px 0 25px;
             gap:30px;
         }
+        &__content-kitchen {
+            padding: 25px 25px 0 25px;
+            gap: 30px;
+        }
+        &__content-plants {
+            padding: 25px 25px 0 25px;
+            gap: 30px;
+        }
+        &__tab {
+            &:hover::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                background-color: $ceramic;
+                bottom: -4px;
+            }
+        }
     }
 }
 @media screen and (min-width:1920px) {
@@ -112,6 +151,16 @@
             margin-top: 100px;
         }
         &__content-tea {
+            padding: 25px 25px 0 25px;
+            gap: 80px;
+            margin: 60px 0 100px 0;
+        }
+        &__content-kitchen {
+            padding: 25px 25px 0 25px;
+            gap: 80px;
+            margin: 60px 0 100px 0;
+        }
+        &__content-plants {
             padding: 25px 25px 0 25px;
             gap: 80px;
             margin: 60px 0 100px 0;
