--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -84,6 +84,15 @@
         padding-top: 40px;
         text-align: center;
     }
+    &__follow-img {
+        & a {
+            text-decoration: none;
+            color:white;
+            &::visited {
+                color: white;
+            }
+        }
+    }
 }
 @media screen and (min-width: 768px) {
     .footer {
@@ -126,11 +135,19 @@
         }
         &__navigation {
             & a {
-                transition: color, transform 0.3s ease-in-out;
+                transition: color, transform 0.4s ease-in-out;
             }
             & a:hover {
                 color: $ceramic;
-                transform:scale(1.1);
+                transform: scaleX(1.1);
+            }
+        }
+        &__follow-img {
+            & a {
+                transition: color 0.4s ease-in-out;
+            }
+            & a:hover {
+                color:$ceramic;
             }
         }
     }
